--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -3,6 +3,7 @@
   --s-accent: #003955;
   --s-accent-hover: #FA744B;
   --s-blue: #0B0F41;
+  --s-navy: #0F597E;
   --s-grey: #8C8C8C;
   --s-bg: #fff;
   --s-text: #000;
@@ -19,6 +20,7 @@
   --s-body-line-height: 1.625;
   --s-space: 16px;
   --s-site-space: 25px;
+  --s-topheader-height: 40px;
   --s-header-height: 70px;
   --s-toggle-height: 42px;
   --s-footer-height: 128px;
@@ -79,7 +81,7 @@
     --f-h6: 25px;
     --f-p: 22px;
     --f-subtitle: 18px;
-    --s-topheader-height: 42px;
+    --s-topheader-height: 40px;
     --s-header-height: 80px;
     --s-header-height-post: 90px;
     --s-footer-height: 40px;
