--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -42,6 +42,9 @@
   a {
     color: var(--s-text);
   }
+  .show-nav & { 
+    position: fixed;
+  }
 }
 
 .site-header-space {
@@ -56,7 +59,8 @@
   display: flex;
   align-items: center;
   img {
-    width: 70px;
+    width: auto;
+    height: 40px;
   }
 }
 
@@ -80,9 +84,9 @@
 .site-toggle {
   position: absolute;
   top: calc((var(--s-header-height) - 50px) / 2);
-  left: 0;
+  right: 12px;
   height: 50px;
-  width: 56px;
+  width: 50px;
   font-size: 10px;
   padding: 16px;
   cursor: pointer;
@@ -97,7 +101,7 @@
       display: block;
       content: "";
       border-radius: 2px;
-      background-color: var(--s-text);
+      background-color: var(--s-navy);
       height: 2px;
       position: absolute;
       transform: rotate(0);
@@ -107,18 +111,18 @@
     &:before {
       // Line: 1 (Relative to line 2)
       left: 0;
-      right: -4px;
+      right: 0px;
       top: -8px;
     }
     & {
       // Line: 2
-      left: 16px;
-      right: 16px;
+      left: 14px;
+      right: 14px;
     }
     &:after {
       // Line: 3 (Relative to line 2)
       left: 0;
-      right: 4px;
+      right: 0px;
       top: 8px;
     }
   }
@@ -161,25 +165,9 @@
   }
 }
 
-.site-member {
-  position: absolute;
-  right: 60px;
-  top: 50%;
-  transform: translateY(-50%);
-  .pic {
-    line-height: 0;
-    img {
-      border-radius: 50px;
-      width: 32px;
-    }
-  }
-  .info {
-    display: none;
-  }
-}
 
 .site-nav-m {
-  font-size: 17px;
+  font-size: 25px;
   position: absolute;
   display: block;
   left: 0;
@@ -191,37 +179,61 @@
   overflow: hidden;
   transition: 0.5s ease;
   z-index: 1;
+  .s-container { 
+    padding: 0;
+  }
   ul {
-    padding: 0 10px;
-    ul {
+    padding: 0;
+    margin: 0;
+    ul.sub-menu {
       padding: 0;
-      font-size: 0.9em;
-      font-weight: normal;
+      background-color: #002F46;
       li {
+        &:first-child { 
+          padding-top: 20px;
+          .plus { 
+            top: 35px;
+          }
+        }
+        &:last-child {
+          padding-bottom: 30px;
+        }
         border-bottom: none;
       }
       a {
-        padding: 4px 0 12px;
+        padding: 5px 10px 5px 38px;
+        font-size: 22px;
+        font-weight: 400;
+      }
+      ul { 
+        background-color: #002A3F;
+        li {
+          &:first-child { 
+            padding-top: 15px;
+          }
+          &:last-child {
+            padding-bottom: 20px;
+          }
+          border-bottom: none;
+        }
+        a { 
+          padding: 5px 10px 5px 62px;
+        }
       }
     }
   }
   li {
     list-style: none;
-    padding: 0;
     position: relative;
     color: var(--s-text);
-    border-bottom: 1px solid var(--s-line);
     a {
+      font-size: 25px;
+      font-weight: 500;
       display: block;
       color: var(--s-text);
-      padding: 10px 0;
+      padding: 8px 25px;
       width: 80%;
-      &:active {
-        opacity: 0.6;
-      }
-    }
-    &.current-menu-item > a {
-      opacity: 0.56;
+      text-transform: uppercase;
     }
   }
   svg {
@@ -235,6 +247,7 @@
     -webkit-overflow-scrolling: touch;
     overflow: scroll;
     opacity: 1;
+    padding: 40px 0;
     .menu > li {
       transform: scale(1) translateY(0px);
       opacity: 1;
@@ -242,38 +255,89 @@
   }
   .menu-item-has-children {
     position: relative;
-    > svg {
-      position: absolute;
-      right: -10px;
-      top: 5px;
-      opacity: 0.8;
-      cursor: pointer;
-      transition: 0.3s;
-      width: 40px;
-      height: 40px;
-      padding: 10px;
-      z-index: 1;
-    }
-    &.active > svg {
-      transform: scaleY(-1);
+    &.active {
+      > a { 
+        color: var(--s-accent-hover);
+        font-weight: 700;
+      }
+      > .plus b { 
+        background-color: var(--s-accent-hover);
+        &:before {
+          background-color: var(--s-accent-hover);
+        }
+      }
     }
     > .sub-menu {
       max-height: 0;
       opacity: 0;
       overflow: hidden;
       transition: max-height 0.5s, opacity 0.3s;
-      svg {
-        width: 30px;
-        height: 30px;
-        padding: 6px;
-        right: -5px;
-        top: 2px;
+      .plus { 
+        right: 37px;
+        top: 15px;
+      }
+      li.active{
+        .sub-menu { 
+          margin-top: 12px;
+        }
+        > a { 
+          color: white;
+          font-weight: 400;
+        }
       }
     }
     &.active > .sub-menu {
+      margin-bottom: 12px;
       max-height: 300vh;
       opacity: 1;
       transition: opacity 0.6s ease-in-out;
+    }
+    &.active > .plus { 
+      &:hover { 
+        b { 
+          &:before { 
+            background-color: transparent;
+          }
+        }
+      }
+      b { 
+        &:before { 
+          background-color:transparent;
+        }
+      }
+    }
+    .plus {
+      cursor: pointer;
+      position: absolute;
+      top: 22px;
+      right: 25px;
+      width: 12px;
+      height: 12px;
+      b { 
+        display: block;
+        -webkit-transition: top 0.3s 0.15s, left 0.1s, background-color 0.1s, -webkit-transform 0.2s;
+        transition: top 0.3s 0.15s, left 0.1s, background-color 0.1s, -webkit-transform 0.2s;
+        transition: top 0.3s 0.15s, left 0.1s, background-color 0.1s, transform 0.2s;
+        transition: top 0.3s 0.15s, left 0.1s, background-color 0.1s, transform 0.2s, -webkit-transform 0.2s;
+        height: 1px;
+        width: 12px;
+        background-color: white;
+        position: absolute;
+        transform:translateY(-50%);
+        top: 50%;
+        right: 0;
+        pointer-events: none;
+        &:before { 
+          display: block;
+          content: "";
+          background-color: white;
+          position:absolute;
+          height: 12px;
+          width: 1px;
+          top: -6px;
+          left: 6px;
+        }
+      }
     }
   }
   .menu > li {
@@ -304,6 +368,7 @@
     display: none;
   }
 }
+
 // Headbar
 @media (max-width: 991px) {
   body.headbar-m {
