--- a/css/scss/_custom.scss
+++ b/css/scss/_custom.scss
@@ -160,6 +160,9 @@ h5 {
 p { 
     font-size: var(--f-p);
 }
+.font-weight-500 { 
+    font-weight: 500;
+}
 
 .mt-0 {
     margin-top: 0 !important;
