--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -830,36 +830,85 @@ body.category .content-item .cat-links {
 }
 
 /* == FOOTER == */
-.site-footer-space {
-  height: var(--s-footer-height);
-}
-.site-footer {
+.btn-scroll-to-top { 
   position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  color: var(--s-text);
-  background-color: var(--s-bg);
-  min-height: var(--s-footer-height);
-  a {
-    color: var(--s-text);
+  right: var(--s-space);
+  top: -25px;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #333;
+  border: 1px solid #333;
+  cursor: pointer;
+  z-index: 10;
+  svg { 
+    width: 24px;
+    height: 24px;
+  }
+}
+.footer-menu-links { 
+  display: flex;
+  flex-direction: column;
+  .footer-menu-item { 
+    color: white;
+    font-size: 17px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: var(--c-transition-hover);
+    margin-bottom: 5px;
+    &:hover { 
+      color: var(--s-accent-hover);
+    }
+  }
+}
+.site-footbar {
+  background-color: var(--s-accent);
+  border-top: 2px solid var(--s-accent-hover);
+  .s-container { 
+    position: relative;
+  }
+  .widget { 
+    margin: 0;
+  }
+}
+
+.site-footer {
+  background-color: #f2f2f2;
+  > .s-container { 
+    min-height: var(--s-footer-height);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column-reverse;
+    padding: 20px 0;
+  }
+  .site-info-menu { 
+    text-align: center;
+    .site-bottom-item { 
+      border-right: 1px solid var(--s-accent);
+      font-size: 18px;
+      margin: 0 2.5px; 
+      padding: 0 5px;
+      text-transform: uppercase;
+      line-height: .8;
+      display: inline-block;
+      &:last-child { 
+        border-right: 0;
+      }
+      @media only screen and (max-width: 470px) {
+        &:nth-child(3) { 
+          border-right: 0;
+        }
+      }
+    }
   }
 }
 .site-info {
-  font-size: 12px;
-  text-align: center;
-  text-transform: uppercase;
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  left: 0;
-  transform: translateY(-50%);
-}
-.site-footbar {
-  .widget {
-    margin-bottom: 0;
-  }
-  p:last-of-type {
-    margin-bottom: 0;
-  }
+  font-size: 18px;
+  color: var(--s-accent);  
+  margin-top: 20px;
 }
