--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -971,3 +971,60 @@ body.category .content-item .cat-links {
     }
   }
 }
+
+
+
+/*
+   ####  #####  ####   ####  #    # 
+  #        #   #    # #    # #   #  
+   ####    #   #    # #      ####   
+       #   #   #    # #      #  #   
+  #    #   #   #    # #    # #   #  
+   ####    #    ####   ####  #    # 
+*/
+.stock-homepage { 
+  .title { 
+    color: #333;
+    font-size: 45px;
+    font-weight: 700;
+    margin-bottom: 0;
+  }
+  .date { 
+    color: #828282;
+    font-size: 20px;
+  }
+  .divider-sm {
+    height: 1.5px;
+    background-color: var(--s-accent-hover);
+    width: 30px;
+    position: relative;
+    top: -8px;
+  }
+  .main-stock {
+    font-weight: 700;
+    font-size: 50px;
+    color: var(--s-accent);
+  }
+  .s-grid.section-1 { 
+    margin-bottom: 45px;
+    grid-template-columns: 1fr;
+  }
+  .s-grid.section-2 { 
+    margin-bottom: 0;
+  }
+  .s-grid { 
+    grid-template-columns: 2fr 3fr;
+  }
+  label, .value {
+    color: #333;
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 0;
+  }
+  .value, .price { 
+    text-align: right;
+  }
+  .section-detail { 
+    margin-bottom: 10px;
+  }
+}
