--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -424,3 +424,25 @@ body.headbar-d {
     }
   }
 }
+
+/*
+  #####   ####  #    # #    # #       ####    ##   #####  
+  #    # #    # #    # ##   # #      #    #  #  #  #    # 
+  #    # #    # #    # # #  # #      #    # #    # #    # 
+  #    # #    # # ## # #  # # #      #    # ###### #    # 
+  #    # #    # ##  ## #   ## #      #    # #    # #    # 
+  #####   ####  #    # #    # ######  ####  #    # #####  
+*/
+.file-download { 
+  flex-direction: row;
+  .file-name { 
+    h4 { 
+      margin-bottom: 0;
+    }
+  }
+  .file-btns  {
+    .button { 
+      margin: 0 10px;
+    }
+  }
+}
