--- a/css/scss/_custom.scss
+++ b/css/scss/_custom.scss
@@ -280,6 +280,21 @@ p {
     }
 }
 
+.btn-link { 
+    font-size: 18px;
+    font-weight: 400;
+    color: #333;
+    svg { 
+        margin-left: 5px;
+    }
+    &:hover { 
+        color: var(--s-accent-hover);
+    }
+    @media only screen and (max-width: 1024px) {
+        font-size: 20px;
+    }
+}
+
 .language-switcher { 
     > div { 
         width: 70px;
