--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -515,15 +515,54 @@
   }
   &.-card {
     box-shadow: var(--s-shadow);
-    border-radius: var(--s-border-radius);
+    border-radius: 0px 0px 5px 5px;
     padding: var(--s-box-padding);
     background-color: var(--s-bg);
     .pic {
       margin: calc(-1 * var(--s-box-padding)) calc(-1 * var(--s-box-padding))
         var(--s-box-padding);
-      border-radius: var(--s-border-radius) var(--s-border-radius) 0 0;
+      border-radius: 0;
+      height: 191px;
       img {
-        border-radius: var(--s-border-radius) var(--s-border-radius) 0 0;
+        height: 191px;
+        object-fit: cover;
+        border-radius: 0;
+      }
+      @media only screen and (min-width: 600px) {
+        height: 320px;
+        img { 
+          height: 320px;
+        }
+      }
+    }
+    .entry-meta, 
+    .entry-meta a{ 
+      color: #828282;
+      font-size: 18px;
+      font-weight: 500;
+      margin-bottom: 10px;
+    }
+    .entry-title { 
+      margin-bottom: 10px;
+      a { 
+        min-height: 90px;
+        color: #000;
+        font-size: 25px;
+        font-weight: 700;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: normal;
+      }
+    }
+    .entry-link a{ 
+      color: #333;
+      font-size: 20px;
+      font-weight: 400;
+      &:hover { 
+        color: var(--s-accent-hover);
       }
     }
   }
@@ -555,79 +594,6 @@
     }
     .entry-summary {
       display: none;
-    }
-  }
-  &.-caption {
-    position: relative;
-    background-color: #000;
-    border-radius: var(--s-border-radius);
-    box-shadow: var(--s-shadow);
-    .pic {
-      height: 100%;
-      min-height: 150px;
-      margin: 0;
-      opacity: 0.8;
-      transition: 0.7s ease;
-      border-radius: var(--s-border-radius);
-      display: flex;
-      align-items: stretch;
-      img {
-        height: 100%;
-        object-fit: cover;
-        border-radius: var(--s-border-radius);
-        transition: 0.7s ease;
-      }
-    }
-    .entry-title {
-      margin-bottom: 0;
-    }
-    .entry-meta {
-      max-height: 0;
-      overflow: hidden;
-      opacity: 0;
-      margin-top: 0;
-      transition: 0.7s ease;
-      color: var(--s-bg);
-    }
-    .info {
-      position: absolute;
-      bottom: 0;
-      z-index: 1;
-      padding: 15px;
-      color: var(--s-bg);
-      a {
-        color: var(--s-bg);
-      }
-    }
-    &:hover {
-      .pic {
-        opacity: 0.4;
-      }
-      .entry-meta {
-        max-height: 42px;
-        opacity: 1;
-        margin-top: 8px;
-      }
-    }
-  }
-  &.-hero {
-    background-color: #fff;
-    box-shadow: var(--s-shadow);
-    margin: 0 calc(var(--s-space) * -1) 0;
-    @media (min-width: 768px) {
-      margin: 0;
-      border-radius: var(--s-border-radius) 0 0 var(--s-border-radius);
-    }
-
-    .pic {
-      img {
-        width: 100%;
-        max-height: 100vh;
-        object-fit: cover;
-      }
-    }
-    .info {
-      padding: 0 15px 15px;
     }
   }
 }
@@ -1122,6 +1088,62 @@ body.category .content-item .cat-links {
         background-color: var(--s-accent-hover);
         color: white;
       }
+    }
+  }
+}
+
+
+
+/*
+  #####   ##   #####  
+    #    #  #  #    # 
+    #   #    # #####  
+    #   ###### #    # 
+    #   #    # #    # 
+    #   #    # #####  
+*/
+.latest-news { 
+  padding-right: 0;
+  .footer-link { 
+    text-align: center;
+    padding-right: var(--s-site-space);
+  }
+} 
+.tab-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 55px;
+  padding-right: var(--s-site-space);
+  .tab-item-container { 
+    display: flex;
+    align-items: center;
+    .tab-item { 
+      cursor: pointer;
+      height: 40px;
+      border-radius: 50px;
+      text-align: center;
+      padding: 10px 20px;
+      margin-right: var(--s-space);
+      font-size: 20px;
+      color: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &.active { 
+        background-color: var(--s-accent-hover);
+        color: white;
+      }
+      &:last-child { 
+        margin-right: 0px;
+      }
+    }
+  }
+}
+.tab-content-container { 
+  .s-slider { 
+    .dots { 
+      display: none;
     }
   }
 }
