--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -38,7 +38,7 @@
   color: var(--s-text);
   background-color: var(--s-bg);
   min-height: var(--s-header-height);
-  box-shadow: var(--s-shadow);
+  border-bottom: 1px solid #F2F2F2;
   a {
     color: var(--s-text);
   }
@@ -1144,6 +1144,143 @@ body.category .content-item .cat-links {
   .s-slider { 
     .dots { 
       display: none;
+    }
+  }
+}
+
+
+
+/*
+  #    # #  ####  #####  ####  #####  #   # 
+  #    # # #        #   #    # #    #  # #  
+  ###### #  ####    #   #    # #    #   #   
+  #    # #      #   #   #    # #####    #   
+  #    # # #    #   #   #    # #   #    #   
+  #    # #  ####    #    ####  #    #   #   
+*/
+.history { 
+  position: relative;
+  min-height: 100vh;
+  padding-right: 0;
+  .s-grid {
+    margin-bottom: 80px;
+    position: relative;
+  }
+  .timeline-line {
+    position: absolute;
+    left: 0%;
+    top: 40px;
+    bottom: 0;
+    width: 2px;
+    background-color: #F2F2F2;
+    z-index: 1;
+    .progress {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 0;
+      background-color: var(--s-accent-hover);
+      transition: height .8s ease-out;
+    }
+  }
+  .dot {
+    position: absolute;
+    left: -32px;
+    z-index: 2;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #BDBDBD;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    top: 40px;
+    transition: var(--c-transition-hover);
+    .inner-dot { 
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      background-color: #BDBDBD;
+      transition: var(--c-transition-hover);
+    }
+  }
+  .history-milestone { 
+    padding-left: 0px;
+    order: 1;
+    h3 { 
+      font-size: 35px;
+      color: #BDBDBD;
+      font-weight: 700;
+      text-transform: uppercase;
+      transition: var(--c-transition-hover);
+      margin: 0;
+      margin-top: 20px;
+      top: 5px;
+      position: relative;
+    }
+  }
+  .history-detail { 
+    order: 2;
+    padding-top: 0px;
+    img { 
+      filter: grayscale(100%) brightness(100%) contrast(100%);
+      transition: var(--c-transition-hover);
+    }
+    .history-pinpoint {
+      margin-top: 25px;
+      .description p{
+        color: #828282;
+        font-size: 22px;
+        font-weight: 400;
+        line-height: 34px;
+        transition: var(--c-transition-hover);
+      }
+      > div { 
+        display: flex;
+        color: #828282;
+        font-size: 22px;
+        transition: var(--c-transition-hover);
+        .year { 
+          font-weight: 700;
+          min-width: 60px;
+          line-height: normal;
+        }
+        .description { 
+          p { 
+            font-weight: 400;
+            line-height: normal;
+            margin-bottom: 10px;
+          }
+        }
+      }
+    }
+  }
+  .s-grid.active { 
+    .history-milestone { 
+      h3 { 
+        color: var(--s-accent-hover);
+      }
+    }
+    .history-detail { 
+      img { 
+        filter: grayscale(0%) brightness(100%) contrast(100%);
+      }
+      .history-pinpoint {
+        .description p{
+          color: #333;
+        }
+        > div { 
+          color: #333;
+        }
+      }
+    }
+    .dot {
+      border: 1px solid var(--s-accent-hover);
+      .inner-dot { 
+        background-color:  var(--s-accent-hover);;
+      }
     }
   }
 }
