--- a/css/scss/_custom.scss
+++ b/css/scss/_custom.scss
@@ -870,3 +870,34 @@ p {
         margin-bottom: 0;
     }
 }
+
+
+/*
+    #####  #####  ######   ##   #####   ####  #####  #    # #    # #####  
+    #    # #    # #       #  #  #    # #    # #    # #    # ##  ## #    # 
+    #####  #    # #####  #    # #    # #      #    # #    # # ## # #####  
+    #    # #####  #      ###### #    # #      #####  #    # #    # #    # 
+    #    # #   #  #      #    # #    # #    # #   #  #    # #    # #    # 
+    #####  #    # ###### #    # #####   ####  #    #  ####  #    # #####  
+*/
+.rank-math-breadcrumb { 
+    color: #828282;
+    font-size: 18px;
+    font-weight: 400;
+    p {margin:0}
+    a {
+        color: #828282;
+    }
+    .separator { 
+        margin: 0 4px;
+    }
+    .last { 
+        font-weight: 500;
+    }
+    @media only screen and (max-width: 600px) {
+        font-size: 16px;
+        .last { 
+            font-weight: 400;
+        }
+    }
+}
