--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -513,6 +513,20 @@
       }
     }
   }
+  .entry-link { 
+    margin-top: 10px;
+  }
+  .entry-link a{ 
+    color: #333;
+    font-size: 20px;
+    font-weight: 400;
+    svg { 
+      margin-left: 10px;
+    }
+    &:hover { 
+      color: var(--s-accent-hover);
+    }
+  }
   &.-card {
     box-shadow: var(--s-shadow);
     border-radius: 0px 0px 5px 5px;
@@ -557,43 +571,71 @@
         line-height: normal;
       }
     }
-    .entry-link a{ 
-      color: #333;
-      font-size: 20px;
-      font-weight: 400;
-      &:hover { 
-        color: var(--s-accent-hover);
-      }
-    }
   }
   &.-list {
     display: flex;
+    flex-direction: column;
     padding: 0;
-    box-shadow: var(--s-shadow);
     border-radius: var(--s-border-radius);
     background-color: var(--s-bg);
+    border: 1px solid #F2F2F2;
     .pic {
       margin: 0;
-      width: 36%;
+      width: 100%;
+      padding-right: 0px;
+      border-radius: var(--s-border-radius) var(--s-border-radius) 0 0;
+      height: 240px;
       a {
         display: block;
         height: 100%;
+        overflow: hidden;
       }
       img {
-        border-radius: var(--s-border-radius) 0 0 var(--s-border-radius);
+        border-radius: var(--s-border-radius) var(--s-border-radius) 0 0;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        height: 240px;
       }
     }
     .info {
-      width: 64%;
-      padding: var(--s-box-padding) var(--s-box-padding) var(--s-box-padding)
-        15px;
-      display: flex;
+      width: 100%;
+      padding: 10px 16px 20px;
+      .entry-meta { 
+        font-size: 18px;
+        font-weight: 700;
+        margin-bottom: 10px;
+        a { 
+          color: var(--s-accent-hover);
+        }
+      }
+      .entry-title { 
+        color: var(--s-accent);
+        font-size: 25px;
+        font-weight: 700;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        line-height: 1;
+      }
     }
     .entry-summary {
-      display: none;
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 20px;
+      p { 
+        margin: 0;
+        color: #4F4F4F;
+        font-size: 20px;
+        line-height: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 5;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
@@ -692,59 +734,78 @@ body.category .content-item .cat-links {
     }
   }
 }
-.content-pagination {
-  clear: both;
-  margin-bottom: var(--s-space);
-  text-align: center;
-  a,
-  span {
-    display: inline-block;
-    text-align: center;
-    min-width: 36px;
-    height: 36px;
-    border-radius: 36px;
-    margin: 0 -1px;
-    padding: 0;
-    line-height: 36px;
-    font-family: var(--s-heading);
-    font-weight: var(--s-heading-weight);
-  }
-  a {
-    color: var(--s-border);
-    transition: 0.3s;
-    &:hover {
-      color: var(--s-accent-hover);
-    }
-    &:active {
-      color: var(--s-bg);
-      background-color: var(--s-accent);
-    }
-  }
-  svg {
-    transform: translateY(-1px);
-  }
-  .current {
-    color: var(--s-bg);
-    background-color: var(--s-accent);
-  }
-}
-
 /* SINGLE */
 .single-area {
-  .main-header {
-    text-align: center;
-  }
   .content-area {
-    max-width: 750px;
     line-height: 1.8;
     margin: 0 auto;
     padding-left: 0;
     padding-right: 0;
   }
-  .entry-meta {
-    text-align: center;
+}
+
+.content-single { 
+  padding-bottom: 100px;
+  .pic { 
+    width: 100%;
+    img { 
+      width: 100%;
+      border-radius: 5px;
+    }
+  }
+  .entry-title { 
+    margin-top: 30px;
+    margin-bottom: 20px;
+    color: #333;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: normal;
+  }
+  .entry-content { 
+    p { 
+      line-height: 1.5;
+    }
+  }
+  .entry-meta, 
+  .entry-meta a{ 
+    color: #828282;
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 10px;
   }
 }
+
+.related-container { 
+  padding-bottom: 90px;
+  .s-container { 
+    padding-right: 0;
+  }
+  .relate-title { 
+    font-size: 40px;
+    color: #333;
+    font-weight: 700;
+  }
+  .divider { 
+    width: 42px;
+    height: 3px;
+    background-color: var(--s-accent-hover);
+    margin-bottom: 30px;
+  }
+  .s-grid, .s-slider { 
+    grid-gap: 20px;
+    .content-item.-card { 
+      border: 1px solid #f2f2f2;
+      border-radius: 5px;
+      .pic {
+        border-radius: 5px 5px 0 0;
+      }
+    }
+    .dots {
+      display: none;
+    }
+  }
+}
+
 /* WIDGET AREA */
 .widget-area {
   .current-menu-item > a {
@@ -1280,6 +1341,67 @@ body.category .content-item .cat-links {
       border: 1px solid var(--s-accent-hover);
       .inner-dot { 
         background-color:  var(--s-accent-hover);;
+      }
+    }
+  }
+}
+
+
+/*
+    ##   #    #   ##   #####  #####  
+   #  #  #    #  #  #  #    # #    # 
+  #    # #    # #    # #    # #    # 
+  ###### # ## # ###### #####  #    # 
+  #    # ##  ## #    # #   #  #    # 
+  #    # #    # #    # #    # #####  
+*/
+.taxonomy-banner { 
+  > .s-container { 
+    min-height: 180px;
+    z-index: 1;
+  }
+  background: var(--s-accent);
+  position: relative;
+  .bg { 
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .1;
+  }
+  .rank-math-breadcrumb { 
+    color: #fff;
+    padding-top: 30px;
+    a {
+      color: #fff;
+    }
+  }
+  .taxonomy-title { 
+    color: #FFF;
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 20px;
+  }
+}
+.tax-award-type { 
+  .s-grid { 
+    padding-top: 50px;
+    grid-gap: 30px;
+    > .content-item:first-child  { 
+      margin-bottom: 0px;
+    }
+    .content-item.-card { 
+      border: 1px solid #f2f2f2;
+      border-radius: 5px;
+      .pic {
+        border-radius: 5px 5px 0px 0px;
+        height: 240px;
+        img { 
+          height: 240px;
+        }
       }
     }
   }
