--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -389,18 +389,25 @@
   display: flex;
   &.-banner {
     min-height: var(--s-title-height);
-    background: #000;
+    background: var(--s-accent);
     color: #fff;
-    text-align: center;
-
     a {
       color: #fff;
     }
     .s-container {
+      flex-direction: column;
       position: relative;
       display: flex;
-      align-items: center;
-      justify-content: center;
+    }
+    .rank-math-breadcrumb { 
+      color: #fff;
+      padding-top: 10px;
+      a {
+        color: #fff;
+      }
+    }
+    .title { 
+      padding-top: 10px;
     }
   }
   &.-minimal {
@@ -434,19 +441,12 @@
   }
   .title {
     font-size: var(--s-title-size);
+    font-weight: 700;
     margin: 0;
     small {
       font-size: 0.7em;
       display: block;
       padding-top: 5px;
-    }
-  }
-  .bc {
-    font-size: 0.875em;
-    margin: 10px 0 0;
-    .si-angle-right {
-      padding: 0 5px;
-      vertical-align: -1px;
     }
   }
 }
@@ -639,6 +639,44 @@
     }
   }
 }
+// Card document download
+.content-document { 
+  display: flex;
+  align-items: center;
+  padding: 20px 0 0 0;
+  border-bottom: 1px solid #F2F2F2;
+  flex-wrap: wrap;
+  .entry-date { 
+    min-width: 125px;
+    margin-right: 20px;
+    a { 
+      color: #828282;
+      font-size: 20px;
+      font-weight: 400;
+    }
+  }
+  .entry-header {
+    flex: 1;
+  }
+  .entry-title { 
+    color: #333;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.15;
+    margin: 0;
+  }
+  .file-btns { 
+    width: 100%;
+    margin: 20px 0;
+    justify-content: center; 
+    .button { 
+      margin: 0 30px;
+    }
+  }
+}
+
+
+
 .content-headline {
   background: var(--s-bg);
   color: var(--s-text);
@@ -1115,40 +1153,40 @@ body.category .content-item .cat-links {
       margin-bottom: 10px;
     }
   }
-  .file-btns  {
-    min-width: fit-content;
-    display: flex;
-    align-items: center;
-    .button { 
-      font-size: 18px;
-      font-weight: 400;
-      height: 40px;
-      padding: 6px 10px;
-      margin: 0 30px;
-      text-transform: uppercase;
-      svg { 
-        margin-right: 10px;
-      }
+}
+.file-btns  {
+  min-width: fit-content;
+  display: flex;
+  align-items: center;
+  .button { 
+    font-size: 18px;
+    font-weight: 400;
+    height: 40px;
+    padding: 6px 10px;
+    margin: 0 30px;
+    text-transform: uppercase;
+    svg { 
+      margin-right: 10px;
     }
-    .btn-view { 
-      color: #333;
-      &:hover { 
-        color: var(--s-accent-hover);
-      }
-    }
-    .divider-vertical { 
-      background-color: #E0E0E0;
-      height: 27px;
-      width: 1px;
-    }
-    .btn-download {
+  }
+  .btn-view { 
+    color: #333;
+    &:hover { 
       color: var(--s-accent-hover);
-      transition: var(--c-transition-hover);
-      border-radius: 50px;
-      &:hover { 
-        background-color: var(--s-accent-hover);
-        color: white;
-      }
+    }
+  }
+  .divider-vertical { 
+    background-color: #E0E0E0;
+    height: 27px;
+    width: 1px;
+  }
+  .btn-download {
+    color: var(--s-accent-hover);
+    transition: var(--c-transition-hover);
+    border-radius: 50px;
+    &:hover { 
+      background-color: var(--s-accent-hover);
+      color: white;
     }
   }
 }
@@ -1404,5 +1442,59 @@ body.category .content-item .cat-links {
         }
       }
     }
+  }
+}
+
+
+/*
+  #####   ####   ####  #    # #    # ###### #    # ##### 
+  #    # #    # #    # #    # ##  ## #      ##   #   #   
+  #    # #    # #      #    # # ## # #####  # #  #   #   
+  #    # #    # #      #    # #    # #      #  # #   #   
+  #    # #    # #    # #    # #    # #      #   ##   #   
+  #####   ####   ####   ####  #    # ###### #    #   #   
+*/
+.document-header { 
+  display: flex;
+  flex-direction: column;
+  h3 { 
+    flex: 1;
+    font-size: 30px;
+    font-weight: 700;
+    color: #333;
+    margin: 0;
+  }
+  .filter-container { 
+    margin-top: 30px;
+  }
+}
+
+.document-container { 
+  margin-top: 40px;
+  .document-table-header { 
+    display: flex;
+    align-items: center;
+    .dth { 
+      label { 
+        color: var(--s-accent);
+        font-size: 22px;
+        font-weight: 700;
+      }
+    }
+    .dth-date { 
+      min-width: 125px;
+      margin-right: 20px;
+      padding-left: 0px;
+    }
+    .dth-title { 
+      flex: 1; 
+      margin-right: 20px;
+    }
+    .dth-action  {
+      min-width: 260px;
+    }
+  }
+  .s-grid { 
+    grid-gap: 0;
   }
 }
