--- a/css/scss/_custom.scss
+++ b/css/scss/_custom.scss
@@ -631,167 +631,6 @@ p {
 
 
 /*
-  #####  #####   ####  #####  #####   ####  #    # #    # 
-  #    # #    # #    # #    # #    # #    # #    # ##   # 
-  #    # #    # #    # #    # #    # #    # #    # # #  # 
-  #    # #####  #    # #####  #    # #    # # ## # #  # # 
-  #    # #   #  #    # #      #    # #    # ##  ## #   ## 
-  #####  #    #  ####  #      #####   ####  #    # #    # 
-*/
-.filter-container{ 
-    width: 100%;
-    margin: 20px 0;
-    .filter-dropdown { 
-        margin-right: 50px;
-        .dropdown-toggle { 
-            background-color: #fff;
-            padding: 0;
-            min-width: 100%;
-            display: block;
-            font-weight: 400;
-            font-size: 18px;
-        }
-        label { 
-            font-size: 18px;
-            font-weight: 400;
-            color: var(--s-accent);
-            margin-right: 20px;
-            margin-bottom: 0;
-            width: auto;
-        }
-        &:last-child { 
-            margin-right: 0;
-        }
-        .facetwp-facet { 
-            margin: 0;
-        }
-        @media (max-width: 1024px) {
-            margin-right: 0;
-            label { 
-                width: 100%;
-                margin: 0;
-                text-align: center;
-            }
-        }
-    }
-}
-.custom-dropdown {
-    position: relative;
-    cursor: pointer;
-    text-align: left;
-    @media (max-width: 1024px) { 
-        text-align: center;
-    }
-}
-.custom-dropdown select {
-    display: none !important; /*hide original SELECT element: */
-}
-.select-selected {
-    &.has-one { 
-        margin: var(--s-space) 0;
-        &::after { content: ''; }
-    }
-    padding: 8px 50px 8px 35px;
-    border:  1px solid var(--s-accent);
-    background-color: var(--s-accent);
-    font-size: 25px;
-    font-weight: 700;
-    color: white;
-    line-height: 1;
-    border-radius: 50px;
-    display: flex;
-    align-items: center;
-    min-height: 53px;
-    z-index: 100;
-    position: relative;
-    svg { 
-        margin-right: 15px;
-    }
-    &::after { 
-      content: url('../img/icon-chev-down.svg');
-      position: absolute;
-      right: 25px;
-      top: 18px;
-      width: 20px;
-    }
-    &.select-arrow-active { 
-        &::after { 
-            top: 6px;
-            transform: scaleY(-1);
-        }
-    }
-}
-.select-items {
-
-    padding-top: 27px;
-    top: 25px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    z-index: 99;
-    border-radius: 0;
-    border-top: none;
-    width: 100%;
-    background-color: #fff;
-    margin: 0 0 0;
-    max-height: 300px;
-    overflow: auto;
-    border-radius: 0px 0px 15px 15px;
-    box-shadow: 0px 1px 45px 0px #00000012;
-
-    > div { 
-        svg { 
-            margin-right: 15px;
-        }
-        color: #4f4f4f;
-        display: flex;
-        align-items: center;
-        font-weight: 400;
-        min-width: 100%;
-        padding: 20px 33px;
-        line-height: 1;
-        cursor: pointer;
-        position: relative;
-        transition: var(--c-transition-hover);
-        font-size: 25px;
-        border-bottom: 1px solid #f2f2f2;
-        &:hover { 
-            background-color: var(--s-accent-light);
-            color: var(--s-accent-hover);
-        }
-        &:after { 
-            content: "";
-            height: 100%;
-          
-            position: absolute;
-            top: 0;
-            left: 10px;
-            bottom: 0;
-            right: 10px;
-        }
-        &:last-child { 
-            &:after { 
-                border-bottom: none;
-            }
-        }
-    }
-    .same-as-selected { 
-        // display: none;
-    }
-    // hide FACETWP Default value
-    .hide-first & { 
-        > div:first-child { 
-            display: none;
-        }
-    }
-}
-  /* Hide the items when the select box is closed: */
-.select-hide {
-    display: none;
-}
-
-
-/*
   #####   ##   #####  
     #    #  #  #    # 
     #   #    # #####  
@@ -892,5 +731,46 @@ p {
         .last { 
             font-weight: 400;
         }
+    }
+}
+
+
+
+/*                                  
+    ######   ##    ####  ###### ##### 
+    #       #  #  #    # #        #   
+    #####  #    # #      #####    #   
+    #      ###### #      #        #   
+    #      #    # #    # #        #   
+    #      #    #  ####  ######   #   
+*/ 
+
+.filter-container {
+    .facetwp-dropdown option:first-child { 
+        display: none;
+    }
+    display: flex;
+    align-items: center;
+    label { 
+        font-size: 18px;
+        color: #4f4f4f;
+        margin-right: 12px;
+        margin-bottom: 0;
+    }
+    .facetwp-facet { 
+        margin-bottom: 0;
+    }
+    .facetwp-dropdown { 
+        min-width: 120px;
+        min-height: 40px;
+        font-size: 20px;
+        color: #333;
+        border: 0;
+        border-bottom: 1px solid var(--s-accent-hover);
+        background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='%23FA744B'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
+        background-size: 13px;
+        background-position: calc(100% - 1px) 16px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
     }
 }
