--- a/css/scss/desktop.scss
+++ b/css/scss/desktop.scss
@@ -649,3 +649,35 @@ body.headbar-d {
     }
   }
 }
+
+
+/*
+  #    # ###### #    #  ####  
+  ##   # #      #    # #      
+  # #  # #####  #    #  ####  
+  #  # # #      # ## #      # 
+  #   ## #      ##  ## #    # 
+  #    # ###### #    #  ####  
+*/
+.news-container { 
+  .s-grid { 
+    grid-template-columns: 1fr repeat(2, minmax(0, 1fr));
+    padding-top: 60px;
+    grid-gap: 40px 20px;
+    > .content-item:first-child  { 
+      grid-column: span 3;
+      margin-bottom: 50px;
+    }
+    .content-item.-card { 
+      .pic {
+        height: inherit;
+        img { 
+          height: inherit;
+        }
+      }
+    }
+  }
+}
+.news-wrap { 
+  text-align: left;
+}
