--- a/css/scss/mobile.scss
+++ b/css/scss/mobile.scss
@@ -1546,3 +1546,58 @@ body.category .content-item .cat-links {
     justify-content: center;
   }
 }
+
+/*
+  #    # ###### #    #  ####  
+  ##   # #      #    # #      
+  # #  # #####  #    #  ####  
+  #  # # #      # ## #      # 
+  #   ## #      ##  ## #    # 
+  #    # ###### #    #  ####  
+*/
+.news-container { 
+  .s-grid { 
+    padding-top: 50px;
+    grid-gap: 30px;
+    > .content-item:first-child  { 
+      margin-bottom: 0px;
+    }
+    .content-item.-card { 
+      border: 1px solid #f2f2f2;
+      border-radius: 5px;
+      .pic {
+        border-radius: 5px 5px 0px 0px;
+        height: 240px;
+        img { 
+          height: 240px;
+        }
+      }
+    }
+  }
+}
+.news-navigation { 
+  padding: 5px;
+  border-radius: 50px;
+  border: 1px solid #F2F2F2;
+  display: inline-flex;
+  .navigation-link { 
+    margin-right: 30px;
+    padding: 10px 20px;
+    color: #333;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: normal;
+    &:last-child {
+      margin-right: 0px;
+    }
+    &.active { 
+      padding: 10px 30px;
+      background-color: var(--s-accent-hover);
+      border-radius: 50px;
+      color: white;
+    }
+  }
+}
+.news-wrap { 
+  text-align: center;
+}
